iRedMail-0.9.8:
    * Apache has been removed, Nginx is the only one web server available.

    * Fixed issues:
        - tools/backup_sogo.sh doesn't set correct owner and permission on
          backup files.
        - Cannot log backup result to SQL db in tools/backup_openldap.sh.
          Note: backup is fine, just no log in SQL db.
          Thanks swejun <ingvar _at_ zebware.com> for the feedback and fix in
          forum.
        - SQL backends: User under disabled domain is able to send email with
          smtp protocol.
        - Cannot sync contacts on Android devices via EAS with SOGo.
        - tools/create_mail_user_* scripts doesn't use current date as
          password last change date for newly created user.
        - tools/migrate_sql_alias_table.py: doesn't support 'utf8' charset.
          Thanks Kacper Guzik <kacper.guzik _at_ zenbox _dot_ pl> for the
          report and code contribution.

    * Updated packages:
        + Roundcube -> 1.3.1

iRedMail-0.9.7:
    * Supports new distribution release:
        + OpenBSD 6.1. OpenBSD 6.0 is not supported anymore.
        + Ubuntu 17.04. Ubuntu 16.10 is not supported anymore.
        + Debian 9 (code name: stretch). Tested with Debian 9 RC3.

    * Improvements:
        - SQL structure change (for SQL backends): drop few columns in sql
          table `vmail.alias`, and creates 2 new tables: forwardings,
          alias_moderators. For more technical details, please check this issue:
          https://bitbucket.org/zhb/iredmail/issues/101

        - SOGo:
            + New script 'tools/backup_sogo.sh'. used to backs up SOGo data
              with 'sogo-tool backup' command.

        - Fail2ban:
            + Add one new regular expession to filter Roundcube log.
            + Enable 2 new jails: apache-auth, nginx-http-auth.
            + Split jail.local to multiple modular jail config files under
              /etc/fail2ban/jail.d.
