@@ -3,5 +3,17 @@
 #
 # HTTPS
 server {
-    include PH_HTTPD_CONF_DIR_VHOST_CONF_DIR/default-ssl/*.conf;
+    listen PH_HTTPS_PORT;
+    server_name _;
+
+    root PH_HTTPD_DOCUMENTROOT;
+    index index.php index.html;
+
+    include PH_NGINX_CONF_TMPL_DIR/ssl.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/awstats.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/iredadmin.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/roundcube.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/sogo.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/misc.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/php-catchall.tmpl;
 }
