@@ -3,5 +3,19 @@
 #
 # HTTP
 server {
-    include PH_HTTPD_CONF_DIR_VHOST_CONF_DIR/default/*.conf;
+    # Listen on ipv4
+    listen PH_HTTPD_PORT;
+
+    # Listen on ipv6.
+    # Note: this setting listens on both ipv4 and ipv6 with Nginx release
+    #       shipped in some Linux/BSD distributions.
+    #listen [::]:PH_HTTPD_PORT;
+
+    server_name _;
+    root PH_HTTPD_DOCUMENTROOT;
+    index index.php index.html;
+
+    include PH_NGINX_CONF_TMPL_DIR/redirect_to_https.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/misc.tmpl;
+    include PH_NGINX_CONF_TMPL_DIR/php-catchall.tmpl;
 }
