@@ -1,7 +1,0 @@
-# Listen on ipv4
-listen PH_HTTPD_PORT;
-
-# Listen on ipv6.
-# Note: this setting listens on both ipv4 and ipv6 with Nginx release
-#       shipped in some Linux/BSD distributions.
-#listen [::]:PH_HTTPD_PORT;
