@@ -1,1 +1,0 @@
-server_name _;
